Complete new graphs and begin work on next task (analysis w/ FFT's)

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "id": "e6d71c22-18d7-4cba-92d2-2b2714232aef",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "[201 rows x 8 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,8 +260,30 @@
     "        df.at[i, rmsecol] = rmse\n",
     "        \n",
     "    plt.close()\n",
-    "# df.to_pickle(\"analysis2.1.pkl\")\n",
+    "    \n",
+    "df.to_pickle(\"analysis2.1.pkl\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "881cea60-1c07-45a0-8c80-7fa8cea98988",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum().sum()"
    ]
   },
   {
