--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -17,10 +17,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CR2.2.100</th>\n",
+       "      <th>RMSE2.2.100</th>\n",
+       "      <th>CR2.2.75</th>\n",
+       "      <th>RMSE2.2.75</th>\n",
+       "      <th>CR2.2.50</th>\n",
+       "      <th>RMSE2.2.50</th>\n",
+       "      <th>CR2.2.25</th>\n",
+       "      <th>RMSE2.2.25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.593847</td>\n",
+       "      <td>8.196205e-11</td>\n",
+       "      <td>7.568493</td>\n",
+       "      <td>2.643968e-09</td>\n",
+       "      <td>10.601476</td>\n",
+       "      <td>2.347662e-09</td>\n",
+       "      <td>15.837927</td>\n",
+       "      <td>2.707236e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.970850</td>\n",
+       "      <td>6.527043e-11</td>\n",
+       "      <td>8.283064</td>\n",
+       "      <td>1.918511e-09</td>\n",
+       "      <td>11.844218</td>\n",
+       "      <td>1.193409e-09</td>\n",
+       "      <td>17.766327</td>\n",
+       "      <td>2.515697e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.481357</td>\n",
+       "      <td>4.644386e-11</td>\n",
+       "      <td>7.444343</td>\n",
+       "      <td>1.470047e-09</td>\n",
+       "      <td>10.630619</td>\n",
+       "      <td>1.557308e-09</td>\n",
+       "      <td>16.516194</td>\n",
+       "      <td>1.628021e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.962810</td>\n",
+       "      <td>4.618577e-11</td>\n",
+       "      <td>8.127816</td>\n",
+       "      <td>1.172642e-09</td>\n",
+       "      <td>11.666045</td>\n",
+       "      <td>9.991263e-10</td>\n",
+       "      <td>18.194956</td>\n",
+       "      <td>1.228900e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.937298</td>\n",
+       "      <td>4.901204e-11</td>\n",
+       "      <td>8.146341</td>\n",
+       "      <td>1.197685e-09</td>\n",
+       "      <td>11.708094</td>\n",
+       "      <td>9.136419e-10</td>\n",
+       "      <td>18.116371</td>\n",
+       "      <td>1.698583e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>5.910355</td>\n",
+       "      <td>1.034624e-02</td>\n",
+       "      <td>7.921284</td>\n",
+       "      <td>1.306056e-01</td>\n",
+       "      <td>11.132460</td>\n",
+       "      <td>6.325086e-02</td>\n",
+       "      <td>16.644178</td>\n",
+       "      <td>7.228017e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>5.838121</td>\n",
+       "      <td>1.133318e-02</td>\n",
+       "      <td>7.853264</td>\n",
+       "      <td>1.371299e-01</td>\n",
+       "      <td>10.985391</td>\n",
+       "      <td>6.692642e-02</td>\n",
+       "      <td>16.472070</td>\n",
+       "      <td>7.816753e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>5.736336</td>\n",
+       "      <td>1.258253e-02</td>\n",
+       "      <td>7.721762</td>\n",
+       "      <td>1.526070e-01</td>\n",
+       "      <td>10.830669</td>\n",
+       "      <td>7.690388e-02</td>\n",
+       "      <td>16.198913</td>\n",
+       "      <td>8.861140e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>5.766874</td>\n",
+       "      <td>1.402025e-02</td>\n",
+       "      <td>7.715101</td>\n",
+       "      <td>1.700068e-01</td>\n",
+       "      <td>10.907557</td>\n",
+       "      <td>8.667817e-02</td>\n",
+       "      <td>16.301535</td>\n",
+       "      <td>9.541269e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>5.743463</td>\n",
+       "      <td>1.575256e-02</td>\n",
+       "      <td>7.764857</td>\n",
+       "      <td>1.988993e-01</td>\n",
+       "      <td>10.935786</td>\n",
+       "      <td>1.061134e-01</td>\n",
+       "      <td>16.350593</td>\n",
+       "      <td>1.205271e-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CR2.2.100   RMSE2.2.100  CR2.2.75    RMSE2.2.75   CR2.2.50    RMSE2.2.50  \\\n",
+       "0     5.593847  8.196205e-11  7.568493  2.643968e-09  10.601476  2.347662e-09   \n",
+       "1     5.970850  6.527043e-11  8.283064  1.918511e-09  11.844218  1.193409e-09   \n",
+       "2     5.481357  4.644386e-11  7.444343  1.470047e-09  10.630619  1.557308e-09   \n",
+       "3     5.962810  4.618577e-11  8.127816  1.172642e-09  11.666045  9.991263e-10   \n",
+       "4     5.937298  4.901204e-11  8.146341  1.197685e-09  11.708094  9.136419e-10   \n",
+       "..         ...           ...       ...           ...        ...           ...   \n",
+       "196   5.910355  1.034624e-02  7.921284  1.306056e-01  11.132460  6.325086e-02   \n",
+       "197   5.838121  1.133318e-02  7.853264  1.371299e-01  10.985391  6.692642e-02   \n",
+       "198   5.736336  1.258253e-02  7.721762  1.526070e-01  10.830669  7.690388e-02   \n",
+       "199   5.766874  1.402025e-02  7.715101  1.700068e-01  10.907557  8.667817e-02   \n",
+       "200   5.743463  1.575256e-02  7.764857  1.988993e-01  10.935786  1.061134e-01   \n",
+       "\n",
+       "      CR2.2.25    RMSE2.2.25  \n",
+       "0    15.837927  2.707236e-10  \n",
+       "1    17.766327  2.515697e-10  \n",
+       "2    16.516194  1.628021e-10  \n",
+       "3    18.194956  1.228900e-10  \n",
+       "4    18.116371  1.698583e-10  \n",
+       "..         ...           ...  \n",
+       "196  16.644178  7.228017e-03  \n",
+       "197  16.472070  7.816753e-03  \n",
+       "198  16.198913  8.861140e-03  \n",
+       "199  16.301535  9.541269e-03  \n",
+       "200  16.350593  1.205271e-02  \n",
+       "\n",
+       "[201 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load in array of 201 images, create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
@@ -94,17 +287,38 @@
     "        # Compute compression ratio and RMSE's, add to dataframe\n",
     "        in_imsize = os.stat('2.2.png').st_size\n",
     "        out_imsize = os.stat(title).st_size\n",
-    "        crcol = 'CR2.1.' + str(q)\n",
+    "        crcol = 'CR2.2.' + str(q)\n",
     "        df.at[i, crcol] = in_imsize/out_imsize\n",
     "        \n",
     "        diff_array = output_array - arr\n",
     "        rmse = np.sqrt(np.mean(diff_array**2))\n",
-    "        rmsecol = 'RMSE2.1.' + str(q)\n",
+    "        rmsecol = 'RMSE2.2.' + str(q)\n",
     "        df.at[i, rmsecol] = rmse\n",
     "    plt.close()\n",
     "    \n",
-    "# df.to_pickle(\"analysis2.2.pkl\")\n",
+    "df.to_pickle(\"analysis2.2.pkl\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f6e383cc-6a8c-449d-9825-a687e541d812",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum().sum()"
    ]
   },
   {
