--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "40c5b294-5219-4620-a954-f45a078c036c",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "8ae75a7b-4315-45f2-82c4-8fcd379d8fa6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RMSE32</th>\n",
+       "      <th>RMSE16</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000158</td>\n",
+       "      <td>0.000158</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     RMSE32    RMSE16\n",
+       "0  0.000158  0.000158"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
@@ -54,7 +99,8 @@
     "\n",
     "# The above code was for the norm calculation being done previously, now being replaced by RMSE.\n",
     "\n",
-    "df.to_pickle(\"analysis2.3.pkl\")"
+    "df.to_pickle(\"analysis2.3.pkl\")\n",
+    "df"
    ]
   },
   {
