Committing any residual changes made

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -1,6 +1,149 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9b491d61-c4b6-4039-88b8-eb13c342b923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b59c8b09-fac0-445f-b627-69a2022d9811",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1.72257e-09, -2.98010e-09,  3.34862e-09, ..., -1.28920e-01,\n",
+       "         -1.56465e-01, -2.22917e-01],\n",
+       "        [ 1.72257e-09, -2.98010e-09,  3.34862e-09, ..., -1.28920e-01,\n",
+       "         -1.56465e-01, -2.22917e-01],\n",
+       "        [ 1.72257e-09, -2.98010e-09,  3.34862e-09, ..., -1.28920e-01,\n",
+       "         -1.56465e-01, -2.22917e-01],\n",
+       "        ...,\n",
+       "        [ 1.72257e-09, -2.98010e-09,  3.34862e-09, ..., -1.28920e-01,\n",
+       "         -1.56465e-01, -2.22917e-01],\n",
+       "        [ 1.72257e-09, -2.98010e-09,  3.34862e-09, ..., -1.28920e-01,\n",
+       "         -1.56465e-01, -2.22917e-01],\n",
+       "        [ 1.72257e-09, -2.98010e-09,  3.34862e-09, ..., -1.28920e-01,\n",
+       "         -1.56465e-01, -2.22917e-01]],\n",
+       "\n",
+       "       [[ 1.58749e-09, -3.01799e-09,  3.29686e-09, ..., -1.26816e-01,\n",
+       "         -1.69784e-01, -2.30471e-01],\n",
+       "        [ 1.58924e-09, -3.01753e-09,  3.29744e-09, ..., -1.26791e-01,\n",
+       "         -1.69586e-01, -2.30515e-01],\n",
+       "        [ 1.59099e-09, -3.01708e-09,  3.29802e-09, ..., -1.26766e-01,\n",
+       "         -1.69388e-01, -2.30558e-01],\n",
+       "        ...,\n",
+       "        [ 1.59110e-09, -3.01686e-09,  3.29847e-09, ..., -1.27189e-01,\n",
+       "         -1.69470e-01, -2.29857e-01],\n",
+       "        [ 1.58929e-09, -3.01742e-09,  3.29767e-09, ..., -1.27002e-01,\n",
+       "         -1.69627e-01, -2.30164e-01],\n",
+       "        [ 1.58749e-09, -3.01799e-09,  3.29686e-09, ..., -1.26816e-01,\n",
+       "         -1.69784e-01, -2.30471e-01]],\n",
+       "\n",
+       "       [[ 1.44125e-09, -3.05879e-09,  3.24586e-09, ..., -1.32796e-01,\n",
+       "         -1.77153e-01, -2.31746e-01],\n",
+       "        [ 1.44358e-09, -3.05827e-09,  3.24646e-09, ..., -1.32686e-01,\n",
+       "         -1.77026e-01, -2.31756e-01],\n",
+       "        [ 1.44590e-09, -3.05776e-09,  3.24707e-09, ..., -1.32576e-01,\n",
+       "         -1.76899e-01, -2.31766e-01],\n",
+       "        ...,\n",
+       "        [ 1.44589e-09, -3.05680e-09,  3.24817e-09, ..., -1.33182e-01,\n",
+       "         -1.76261e-01, -2.30879e-01],\n",
+       "        [ 1.44357e-09, -3.05779e-09,  3.24701e-09, ..., -1.32989e-01,\n",
+       "         -1.76707e-01, -2.31313e-01],\n",
+       "        [ 1.44125e-09, -3.05879e-09,  3.24586e-09, ..., -1.32796e-01,\n",
+       "         -1.77153e-01, -2.31746e-01]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-1.32072e-10, -1.63038e-10,  3.44688e-11, ..., -7.80788e-03,\n",
+       "         -7.96916e-03, -8.93887e-03],\n",
+       "        [-1.30993e-10, -1.54858e-10,  3.15916e-11, ..., -7.03526e-03,\n",
+       "         -7.02787e-03, -8.10809e-03],\n",
+       "        [-1.27830e-10, -1.42956e-10,  3.02180e-11, ..., -6.26052e-03,\n",
+       "         -6.07824e-03, -7.34175e-03],\n",
+       "        ...,\n",
+       "        [-1.27818e-10, -1.65731e-10,  4.31845e-11, ..., -9.36940e-03,\n",
+       "         -9.55683e-03, -1.06716e-02],\n",
+       "        [-1.30989e-10, -1.66705e-10,  3.84806e-11, ..., -8.59545e-03,\n",
+       "         -8.83043e-03, -9.81121e-03],\n",
+       "        [-1.32072e-10, -1.63038e-10,  3.44688e-11, ..., -7.80788e-03,\n",
+       "         -7.96916e-03, -8.93887e-03]],\n",
+       "\n",
+       "       [[-6.89433e-11, -7.82946e-11,  1.93886e-11, ..., -4.12993e-03,\n",
+       "         -4.17052e-03, -4.67198e-03],\n",
+       "        [-6.83164e-11, -7.39051e-11,  1.81391e-11, ..., -3.65841e-03,\n",
+       "         -3.60992e-03, -4.17937e-03],\n",
+       "        [-6.65347e-11, -6.75112e-11,  1.76801e-11, ..., -3.17890e-03,\n",
+       "         -3.03855e-03, -3.71390e-03],\n",
+       "        ...,\n",
+       "        [-6.65637e-11, -7.95640e-11,  2.34341e-11, ..., -5.05158e-03,\n",
+       "         -5.09867e-03, -5.66130e-03],\n",
+       "        [-6.83405e-11, -8.01998e-11,  2.12283e-11, ..., -4.59967e-03,\n",
+       "         -4.67671e-03, -5.17552e-03],\n",
+       "        [-6.89433e-11, -7.82946e-11,  1.93886e-11, ..., -4.12993e-03,\n",
+       "         -4.17052e-03, -4.67198e-03]],\n",
+       "\n",
+       "       [[ 2.02087e-19, -4.96186e-14, -1.33078e-13, ..., -9.85308e-04,\n",
+       "         -1.04682e-03, -1.11036e-03],\n",
+       "        [ 2.48255e-15,  2.45968e-13,  8.34162e-14, ..., -8.79228e-04,\n",
+       "         -9.27646e-04, -9.82001e-04],\n",
+       "        [ 4.61342e-15,  4.92100e-13,  2.53187e-13, ..., -7.33660e-04,\n",
+       "         -7.68284e-04, -8.09716e-04],\n",
+       "        ...,\n",
+       "        [-4.62573e-15, -6.13563e-13, -5.56325e-13, ..., -1.04654e-03,\n",
+       "         -1.12103e-03, -1.19604e-03],\n",
+       "        [-2.48598e-15, -3.51169e-13, -3.59143e-13, ..., -1.03839e-03,\n",
+       "         -1.10862e-03, -1.17847e-03],\n",
+       "        [ 2.02087e-19, -4.96186e-14, -1.33078e-13, ..., -9.85308e-04,\n",
+       "         -1.04682e-03, -1.11036e-03]]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d23441a2-ead8-438e-8467-bd2da8915910",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
