--- a/analysis2_combined.ipynb
+++ b/analysis2_combined.ipynb
@@ -335,9 +335,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "2ef1a399-56ca-4086-ac15-0fb5cc878c26",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
