Work on fixing error in implementation: unintended compression ratio calculation for JPG's of varying quality

--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Image'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minterpolate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m griddata\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mImage\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Image'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
@@ -17,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [
@@ -58,55 +70,55 @@
        "      <td>5.593847</td>\n",
        "      <td>8.196205e-11</td>\n",
        "      <td>7.568493</td>\n",
-       "      <td>2.643968e-09</td>\n",
+       "      <td>9.770478e-11</td>\n",
        "      <td>10.601476</td>\n",
-       "      <td>2.347662e-09</td>\n",
+       "      <td>1.328808e-10</td>\n",
        "      <td>15.837927</td>\n",
-       "      <td>2.707236e-10</td>\n",
+       "      <td>2.463017e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5.970850</td>\n",
        "      <td>6.527043e-11</td>\n",
        "      <td>8.283064</td>\n",
-       "      <td>1.918511e-09</td>\n",
+       "      <td>7.553653e-11</td>\n",
        "      <td>11.844218</td>\n",
-       "      <td>1.193409e-09</td>\n",
+       "      <td>1.066376e-10</td>\n",
        "      <td>17.766327</td>\n",
-       "      <td>2.515697e-10</td>\n",
+       "      <td>2.059812e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5.481357</td>\n",
        "      <td>4.644386e-11</td>\n",
        "      <td>7.444343</td>\n",
-       "      <td>1.470047e-09</td>\n",
+       "      <td>5.622364e-11</td>\n",
        "      <td>10.630619</td>\n",
-       "      <td>1.557308e-09</td>\n",
+       "      <td>7.753508e-11</td>\n",
        "      <td>16.516194</td>\n",
-       "      <td>1.628021e-10</td>\n",
+       "      <td>1.480423e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>5.962810</td>\n",
        "      <td>4.618577e-11</td>\n",
        "      <td>8.127816</td>\n",
-       "      <td>1.172642e-09</td>\n",
+       "      <td>5.425235e-11</td>\n",
        "      <td>11.666045</td>\n",
-       "      <td>9.991263e-10</td>\n",
+       "      <td>7.548834e-11</td>\n",
        "      <td>18.194956</td>\n",
-       "      <td>1.228900e-10</td>\n",
+       "      <td>1.412555e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5.937298</td>\n",
        "      <td>4.901204e-11</td>\n",
        "      <td>8.146341</td>\n",
-       "      <td>1.197685e-09</td>\n",
+       "      <td>5.898633e-11</td>\n",
        "      <td>11.708094</td>\n",
-       "      <td>9.136419e-10</td>\n",
+       "      <td>8.079382e-11</td>\n",
        "      <td>18.116371</td>\n",
-       "      <td>1.698583e-10</td>\n",
+       "      <td>1.499082e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -124,55 +136,55 @@
        "      <td>5.910355</td>\n",
        "      <td>1.034624e-02</td>\n",
        "      <td>7.921284</td>\n",
-       "      <td>1.306056e-01</td>\n",
+       "      <td>1.216158e-02</td>\n",
        "      <td>11.132460</td>\n",
-       "      <td>6.325086e-02</td>\n",
+       "      <td>1.660012e-02</td>\n",
        "      <td>16.644178</td>\n",
-       "      <td>7.228017e-03</td>\n",
+       "      <td>2.938850e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
        "      <td>5.838121</td>\n",
        "      <td>1.133318e-02</td>\n",
        "      <td>7.853264</td>\n",
-       "      <td>1.371299e-01</td>\n",
+       "      <td>1.338165e-02</td>\n",
        "      <td>10.985391</td>\n",
-       "      <td>6.692642e-02</td>\n",
+       "      <td>1.805124e-02</td>\n",
        "      <td>16.472070</td>\n",
-       "      <td>7.816753e-03</td>\n",
+       "      <td>3.216867e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
        "      <td>5.736336</td>\n",
        "      <td>1.258253e-02</td>\n",
        "      <td>7.721762</td>\n",
-       "      <td>1.526070e-01</td>\n",
+       "      <td>1.476869e-02</td>\n",
        "      <td>10.830669</td>\n",
-       "      <td>7.690388e-02</td>\n",
+       "      <td>1.995737e-02</td>\n",
        "      <td>16.198913</td>\n",
-       "      <td>8.861140e-03</td>\n",
+       "      <td>3.546910e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
        "      <td>5.766874</td>\n",
        "      <td>1.402025e-02</td>\n",
        "      <td>7.715101</td>\n",
-       "      <td>1.700068e-01</td>\n",
+       "      <td>1.649258e-02</td>\n",
        "      <td>10.907557</td>\n",
-       "      <td>8.667817e-02</td>\n",
+       "      <td>2.241504e-02</td>\n",
        "      <td>16.301535</td>\n",
-       "      <td>9.541269e-03</td>\n",
+       "      <td>3.997027e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
        "      <td>5.743463</td>\n",
        "      <td>1.575256e-02</td>\n",
        "      <td>7.764857</td>\n",
-       "      <td>1.988993e-01</td>\n",
+       "      <td>1.865043e-02</td>\n",
        "      <td>10.935786</td>\n",
-       "      <td>1.061134e-01</td>\n",
+       "      <td>2.515999e-02</td>\n",
        "      <td>16.350593</td>\n",
-       "      <td>1.205271e-02</td>\n",
+       "      <td>4.450844e-02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -181,35 +193,35 @@
       ],
       "text/plain": [
        "     CR2.2.100   RMSE2.2.100  CR2.2.75    RMSE2.2.75   CR2.2.50    RMSE2.2.50  \\\n",
-       "0     5.593847  8.196205e-11  7.568493  2.643968e-09  10.601476  2.347662e-09   \n",
-       "1     5.970850  6.527043e-11  8.283064  1.918511e-09  11.844218  1.193409e-09   \n",
-       "2     5.481357  4.644386e-11  7.444343  1.470047e-09  10.630619  1.557308e-09   \n",
-       "3     5.962810  4.618577e-11  8.127816  1.172642e-09  11.666045  9.991263e-10   \n",
-       "4     5.937298  4.901204e-11  8.146341  1.197685e-09  11.708094  9.136419e-10   \n",
+       "0     5.593847  8.196205e-11  7.568493  9.770478e-11  10.601476  1.328808e-10   \n",
+       "1     5.970850  6.527043e-11  8.283064  7.553653e-11  11.844218  1.066376e-10   \n",
+       "2     5.481357  4.644386e-11  7.444343  5.622364e-11  10.630619  7.753508e-11   \n",
+       "3     5.962810  4.618577e-11  8.127816  5.425235e-11  11.666045  7.548834e-11   \n",
+       "4     5.937298  4.901204e-11  8.146341  5.898633e-11  11.708094  8.079382e-11   \n",
        "..         ...           ...       ...           ...        ...           ...   \n",
-       "196   5.910355  1.034624e-02  7.921284  1.306056e-01  11.132460  6.325086e-02   \n",
-       "197   5.838121  1.133318e-02  7.853264  1.371299e-01  10.985391  6.692642e-02   \n",
-       "198   5.736336  1.258253e-02  7.721762  1.526070e-01  10.830669  7.690388e-02   \n",
-       "199   5.766874  1.402025e-02  7.715101  1.700068e-01  10.907557  8.667817e-02   \n",
-       "200   5.743463  1.575256e-02  7.764857  1.988993e-01  10.935786  1.061134e-01   \n",
+       "196   5.910355  1.034624e-02  7.921284  1.216158e-02  11.132460  1.660012e-02   \n",
+       "197   5.838121  1.133318e-02  7.853264  1.338165e-02  10.985391  1.805124e-02   \n",
+       "198   5.736336  1.258253e-02  7.721762  1.476869e-02  10.830669  1.995737e-02   \n",
+       "199   5.766874  1.402025e-02  7.715101  1.649258e-02  10.907557  2.241504e-02   \n",
+       "200   5.743463  1.575256e-02  7.764857  1.865043e-02  10.935786  2.515999e-02   \n",
        "\n",
        "      CR2.2.25    RMSE2.2.25  \n",
-       "0    15.837927  2.707236e-10  \n",
-       "1    17.766327  2.515697e-10  \n",
-       "2    16.516194  1.628021e-10  \n",
-       "3    18.194956  1.228900e-10  \n",
-       "4    18.116371  1.698583e-10  \n",
+       "0    15.837927  2.463017e-10  \n",
+       "1    17.766327  2.059812e-10  \n",
+       "2    16.516194  1.480423e-10  \n",
+       "3    18.194956  1.412555e-10  \n",
+       "4    18.116371  1.499082e-10  \n",
        "..         ...           ...  \n",
-       "196  16.644178  7.228017e-03  \n",
-       "197  16.472070  7.816753e-03  \n",
-       "198  16.198913  8.861140e-03  \n",
-       "199  16.301535  9.541269e-03  \n",
-       "200  16.350593  1.205271e-02  \n",
+       "196  16.644178  2.938850e-02  \n",
+       "197  16.472070  3.216867e-02  \n",
+       "198  16.198913  3.546910e-02  \n",
+       "199  16.301535  3.997027e-02  \n",
+       "200  16.350593  4.450844e-02  \n",
        "\n",
        "[201 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,6 +269,7 @@
     "        title = '2.2.' + str(q) + '.jpg'\n",
     "        plt.savefig(title, bbox_inches='tight', pad_inches=0, dpi=(q*my_dpi/100))\n",
     "        im = Image.open(title)\n",
+    "        im = im.resize((203, 203), Image.LANCZOS)\n",
     "        im_array = np.asarray(im)\n",
     "    \n",
     "        # Loop through im_array and replace RGB by raw in copy (203x203)\n",
