Work on fixing error in implementation: unintended compression ratio calculation for JPG's of varying quality

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -98,7 +98,10 @@
     "df\n",
     "\n",
     "# Potential problem: in the resizing line, this resizes the image after it's already saved, so out_imsize is still associated with the \n",
-    "# smaller image (when we want it to be the same size image but with less quality) "
+    "# smaller image (when we want it to be the same size image but with less quality) \n",
+    "\n",
+    "# So I think we should go back to working with im.save from the first analysis.ipynb? But need to make sure the computation doesn't take \n",
+    "# too long."
    ]
   },
   {
