Make more progress

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -21,15 +21,15 @@
     "phi = np.load(\"Phi_201snap.npy\")\n",
     "df = pd.DataFrame(index=np.arange(201))\n",
     "\n",
+    "# Define values for k\n",
+    "k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
+    "\n",
     "for i in range(201):\n",
     "    data = phi[:,:,i]\n",
     "\n",
     "    # Compute 1D (in r) and 2D FFT's\n",
     "    fft_r = np.fft.fft(data)\n",
     "    fft2 = np.fft.fft2(data)\n",
-    "    \n",
-    "    # Define values for k\n",
-    "    k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
     "\n",
     "    for k in k_values:\n",
     "        # 1D\n",
@@ -41,7 +41,7 @@
     "        reconstructed1D = np.fft.ifft(fft_compressed1D).real\n",
     "        \n",
     "        # Compute the error (RMSE) and compression ratio\n",
-    "        diff1D = #TODO: Figure out what to subtract renconstructed1D from\n",
+    "        diff1D = #TODO: Figure out what to subtract reconstructed1D from <---------------------------------------\n",
     "        rmse1D = np.sqrt(np.mean(diff1D**2))\n",
     "        cr1D = 101 / k\n",
     "\n",
@@ -69,7 +69,8 @@
     "        rmse_string2D = \"RMSE2D_k=\" + str(k)\n",
     "        df.at[i, cr_string2D] = cr2D\n",
     "        df.at[i, rmse_string2D] = rmse2D\n",
-    "\n"
+    "\n",
+    "df"
    ]
   }
  ],
